projects/sre-projects/sre-project-1-kubernetes-observability/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: sre-demo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
